test/libyul/yulSyntaxTests/invalid/push_disallowed.yul
{
    push0()
    push1()
    push2()
    push3()
    push4()
    push5()
    push6()
    push7()
    push8()
    push9()
    push10()
    push11()
    push12()
    push13()
    push14()
    push15()
    push16()
    push17()
    push18()
    push19()
    push20()
    push21()
    push22()
    push23()
    push24()
    push25()
    push26()
    push27()
    push28()
    push29()
    push30()
    push31()
    push32()
}
// ----
// DeclarationError 4619: (6-11='push0'): Function "push0" not found.
// DeclarationError 4619: (18-23='push1'): Function "push1" not found.
// DeclarationError 4619: (30-35='push2'): Function "push2" not found.
// DeclarationError 4619: (42-47='push3'): Function "push3" not found.
// DeclarationError 4619: (54-59='push4'): Function "push4" not found.
// DeclarationError 4619: (66-71='push5'): Function "push5" not found.
// DeclarationError 4619: (78-83='push6'): Function "push6" not found.
// DeclarationError 4619: (90-95='push7'): Function "push7" not found.
// DeclarationError 4619: (102-107='push8'): Function "push8" not found.
// DeclarationError 4619: (114-119='push9'): Function "push9" not found.
// DeclarationError 4619: (126-132='push10'): Function "push10" not found.
// DeclarationError 4619: (139-145='push11'): Function "push11" not found.
// DeclarationError 4619: (152-158='push12'): Function "push12" not found.
// DeclarationError 4619: (165-171='push13'): Function "push13" not found.
// DeclarationError 4619: (178-184='push14'): Function "push14" not found.
// DeclarationError 4619: (191-197='push15'): Function "push15" not found.
// DeclarationError 4619: (204-210='push16'): Function "push16" not found.
// DeclarationError 4619: (217-223='push17'): Function "push17" not found.
// DeclarationError 4619: (230-236='push18'): Function "push18" not found.
// DeclarationError 4619: (243-249='push19'): Function "push19" not found.
// DeclarationError 4619: (256-262='push20'): Function "push20" not found.
// DeclarationError 4619: (269-275='push21'): Function "push21" not found.
// DeclarationError 4619: (282-288='push22'): Function "push22" not found.
// DeclarationError 4619: (295-301='push23'): Function "push23" not found.
// DeclarationError 4619: (308-314='push24'): Function "push24" not found.
// DeclarationError 4619: (321-327='push25'): Function "push25" not found.
// DeclarationError 4619: (334-340='push26'): Function "push26" not found.
// DeclarationError 4619: (347-353='push27'): Function "push27" not found.
// DeclarationError 4619: (360-366='push28'): Function "push28" not found.
// DeclarationError 4619: (373-379='push29'): Function "push29" not found.
// DeclarationError 4619: (386-392='push30'): Function "push30" not found.
// DeclarationError 4619: (399-405='push31'): Function "push31" not found.
// DeclarationError 4619: (412-418='push32'): Function "push32" not found.
